# routes/comment.route.js
@@ -2,12 +2,13 @@ import { Router } from "express";
 import { postComment, getComments } from "../controllers/comment.controller.js";
 import { protect } from "../middlewares/auth.js"; // JWT middleware
 
-const router = Router();
+const CommentRouter = Router();
 
 // Post a comment (authenticated)
-router.post("/:blogId", protect, postComment);
+CommentRouter.post("/:blogId", protect, postComment);
 
 // Get all comments for a blog
-router.get("/:blogId", getComments);
+CommentRouter.get("/:blogId", getComments);
 
-export default router;
+export default CommentRouter;
+
